# minihashcat

./: .gitignore  Cargo.toml  LICENSE  example.txt  readme.md
.github/workflows/: rust.yml
src/: cli.rs  hasher.rs  lib.rs  main.rs  mode.rs
