[package]
name = "minihashcat"
version = "0.1.1"
edition = "2024"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
clap = { version = "4.5.40", features = ["derive", "string"] }
crossbeam = "0.8.4"
hex = "0.4.3"
md2 = "0.10.2"
md4 = "0.10.2"
sha2 = "0.10.9"
sha3 = "0.10.8"
